--- a/jornal-diario/frontend/.svelte-kit/src/app.html
+++ b/jornal-diario/frontend/.svelte-kit/src/app.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
 
-		
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	%sveltekit.head%
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Forum&family=Inconsolata&family=Jacquard+12&family=Jersey+15&family=Lora:ital,wght@0,400..700;1,400..700&family=Silkscreen:wght@400;700&display=swap');
+	</style>
+
+</head>
+
+<body data-sveltekit-preload-data="hover">
+	<div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
